--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <p class="book-author push-0"><span class="book-author-by micro italic">by</span> <span class="mega">Jules Verne</span></p>
   </header>
 
-  <article class="max-length">
+  <article role="main" class="max-length">
     <header class="chapter-ends chapter-name pad-t-1-2 pad-b-1-2 gutter push relative">
       <hgroup class="chapter-details">
         <h1 class="chapter-number not-bold push-0 italic kilo">Chapter XVIII</h1>
         <h2 class="chapter-title not-bold push-0 peta">The Poulps</h2>
       </hgroup>
-      <nav>
+      <nav role="navigation">
         <ul class="list-group-inline text-center push-0 pin-rc gutter-1-2">
           <li>
-            <a class="btn chapter-btn" href="chapter-xvii.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
+            <a aria-label="" class="btn chapter-btn" href="chapter-xvii.html">
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
             </a>
           </li>
           <li>
             <a class="btn chapter-btn" href="contents.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
             </a>
           </li>
           <li>
             <a class="btn chapter-btn" href="chapter-xix.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
             </a>
           </li>
         </ul>
@@ -117,17 +117,17 @@
         <ul class="list-group-inline text-center push-0">
           <li>
             <a class="btn chapter-btn" href="chapter-xvii.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
             </a>
           </li>
           <li>
             <a class="btn chapter-btn" href="contents.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
             </a>
           </li>
           <li>
             <a class="btn chapter-btn" href="chapter-xix.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
             </a>
           </li>
         </ul>
@@ -136,7 +136,7 @@
   </article>
 
   <footer class="book-ends text-center max-length gutter pad-t-1-2 pad-b-1-2">
-    <small class="micro">Twenty Thousand Leagues Under the Sea © Jules Verne, 1870.</small>
+    <small role="contentinfo" class="micro">Twenty Thousand Leagues Under the Sea © Jules Verne, 1870.</small>
   </footer>
 
 </body>
