--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
         <h1 class="chapter-number not-bold push-0 italic kilo">Chapter XVIII</h1>
         <h2 class="chapter-title not-bold push-0 peta">The Poulps</h2>
       </hgroup>
-      <nav role="navigation">
+      <nav class="no-print" role="navigation">
         <ul class="list-group-inline text-center push-0 pin-rc gutter-1-2">
           <li>
-            <a aria-label="" class="btn chapter-btn" href="chapter-xvii.html">
+            <a class="btn chapter-btn" href="chapter-xvii.html" aria-label="chapter button">
               <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="contents.html">
+            <a class="btn chapter-btn" href="contents.html" aria-label="contents button">
               <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="chapter-xix.html">
+            <a class="btn chapter-btn" href="chapter-xix.html" aria-label="chapter button">
               <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
             </a>
           </li>
@@ -116,17 +116,17 @@
       <nav>
         <ul class="list-group-inline text-center push-0">
           <li>
-            <a class="btn chapter-btn" href="chapter-xvii.html">
+            <a class="btn chapter-btn" href="chapter-xvii.html" aria-label="chapter button">
               <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="contents.html">
+            <a class="btn chapter-btn" href="contents.html" aria-label="chapter button">
               <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="chapter-xix.html">
+            <a class="btn chapter-btn" href="chapter-xix.html" aria-label="chapter button">
               <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
             </a>
           </li>
